<resources>
    <string name="app_name">FacturApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="repetir_contrasenya">Repetir contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="clientes">Clientes</string>
    <string name="facturas">Facturas</string>
    <string name="plantillas">Plantillas</string>
    <string name="hacer_copia_seguridad">Hacer copia de seguridad</string>
    <string name="restaurar_copia_seguridad">Restaurar copia de seguridad</string>
    <string name="dnicif">DNI o CIF</string>
    <string name="nombre_empresa">Nombre de empresa</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="enviar">Enviar</string>
    <string name="registrate">¡Registrate!</string>
    <string name="title_activity_detalle_factura">DetalleFacturaActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="validar_factura">Validar</string>
    <string name="imprimir_factura">Imprimir</string>
    <string name="enviar_factura">Enviar por email</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cancelar_cambios">Cancelar cambios</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="crear_cliente">Crear cliente</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="email_cliente">Email</string>
    <string name="cancelar">Cancelar</string>
    <string name="concepto">Concepto</string>
    <string name="coste_unitario">c/u</string>
    <string name="cantidad">Cantidad</string>
    <string name="Total">Total</string>
    <string name="cliente_dp">Cliente: </string>
<<<<<<< HEAD

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="title_activity_crear_factura">CrearFacturaActivity</string>
    <string name="nuevo_concepto">Nuevo concepto</string>
    <string name="precio">Precio</string>
    <string name="anyadir_concepto">Añadir concepto</string>
>>>>>>> 269eb94d87e101f7c96e469e0235f79f18650295
</resources>
