<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gcs.facturapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:id="@+id/boton_perfil"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="setClickListenerImagenPerfil"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="@android:dimen/thumbnail_height" />

    <Button
        android:id="@+id/boton_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clientes"
        android:drawableLeft="@drawable/cliente"/>

    <Button
        android:id="@+id/boton_facturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/facturas"
        android:drawableLeft="@drawable/factura"/>

    <Button
        android:id="@+id/boton_plantillas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/plantillas"
        android:drawableLeft="@drawable/plantilla"/>

    <Button
        android:id="@+id/boton_hacer_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hacer_copia_seguridad"
        android:drawableLeft="@drawable/backup"/>

    <Button
        android:id="@+id/boton_restaurar_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/restaurar_copia_seguridad"
        android:drawableLeft="@drawable/restaurar_backup"/>
</LinearLayout>
