<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="2.5"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:text="@string/concepto"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@android:color/white"
        android:text="@string/coste_unitario"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@android:color/white"
        android:text="@string/cantidad"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:text="@string/Total"
        android:gravity="center"/>

    <TextView
        android:id="@+id/eliminar_header_list_conceptos"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</LinearLayout>